# mic-drop

./: AGENTS.md  README.md  components.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  vite.config.ts
src/: index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: decoder.rs  devices.rs  engine.rs  mixer.rs  mod.rs
src-tauri/src/commands/: audio.rs  dialog.rs  mod.rs  shortcuts.rs  store.rs
src/components/app-shell/: index.tsx
src/components/app-shell/components/: InspectorToggleButton.tsx  LayoutLockButton.tsx
src/components/audio-settings/: constants.ts  index.tsx  types.ts
src/components/audio-settings/components/: DeviceSelect.tsx  MicControls.tsx  MonitorModeSelect.tsx  RoutingStatusCard.tsx  SetupGuide.tsx
src/components/audio-settings/hooks/: useAudioSettings.ts
src/components/pad/: constants.ts  index.tsx  types.ts
src/components/pad-inspector/: constants.ts  index.tsx  types.ts
src/components/pad-inspector/components/: EditInspectorSidebar.tsx  InspectorForm.tsx  MobileInspectorPanel.tsx
src/components/soundboard/: constants.ts  index.tsx  types.ts
src/components/ui/: context-menu.tsx
src/hooks/: useBoardHydration.ts  useGlobalHotkeys.ts
src/lib/: audio-routing.ts  audio.ts  board.ts  color.ts  grid.test.ts  grid.ts  hotkeys.ts  motion.ts  playback.ts  tauri.ts  types.ts
src/routes/: __root.tsx  index.tsx  settings.tsx
src/store/: audio-routing.ts  board.ts
(+11 files in other folders)
