[package]
name = "mic-drop"
version = "0.1.0"
description = "MicDrop — a configurable desktop soundboard"
authors = ["you"]
edition = "2021"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mic_drop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.3"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-global-shortcut = "2.3.2"
cpal = "0.18.1"
symphonia = { version = "0.6.0", features = ["mp3"] }
rubato = "3.0.0"
crossbeam-channel = "0.5.15"
parking_lot = "0.12.5"

# cpal 0.18.x can resolve `windows` (0.61.x) and `windows-core` (0.62.x) to
# different minors, breaking WASAPI COM impl macros on Windows.
[target.'cfg(target_os = "windows")'.dependencies]
windows-core = "=0.61.2"

